Teste duas versões

--- a/contato.html
+++ b/contato.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
 <body>
   <main>
     <h1>Contato</h1>
-    <p>Clique <a href="index.html">Aqui</a> para voltar para a página inicial</p>
+        <p>Clique <a href="index.html">Aqui</a> para voltar para a p├ígina inicial</p>
   </main>
   <section>
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae id nulla magnam nam modi perferendis, veniam ipsam expedita obcaecati. Quam deleniti at assumenda beatae ut eos amet ipsa quae totam!
